kubernetes/passbolt_ce/manifest/ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: passbolt
  namespace: my-passbolt
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    cert-manager.io/cluster-issuer: selfsigned
spec:
  rules:
  - host: passbolt.local.127.0.0.1.sslip.io
    http:
      paths:
      - backend:
          service:
            name: passbolt-ce
            port:
              number: 8080
        path: /
        pathType: Prefix
  tls: []
